fix:overflow

--- a/src/css/responsividade.css
+++ b/src/css/responsividade.css
@@ -151,14 +151,10 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
   }
-  .ativo {
-    overflow: hidden;
-  }
 
   .hamburger-nav.ativo {
     display: flex;
     opacity: 1;
-    overflow: hidden;
   }
 
   #hero img {
